@@ -109,6 +109,7 @@ production.
   restrictions on some of the database fields.
 * Timezones are now recognised in user preferences when offset is different
   due to DST
+* (bug 31692) "summary" parameter now also work when undoing revisions
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
